# yasertvpk

./: .gitignore  API_GUIDE.txt  TestNewApi.kt  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.github/workflows/: build-ffmpeg.yml  build.yml
RAYAN-TV_Files/: analyze-rayan.py  download-rayan-config.py  rayan_config.json  rayan_urls.txt
RAYAN-TV_Files/RAYAN-TV_extracted/: AndroidManifest.xml  classes3.dex  classes4.dex  classes5.dex  resources.arsc
_apk1/: classes2.dex  kotlin-tooling-metadata.json  resources.arsc
_apk1/res/: -D.xml  -g.xml  -w.xml  -x.xml  05.xml  06.xml  09.xml  0O.xml  0V.xml  1F.xml  1Q.xml  1b.xml  2Z.xml  2f.xml  2j.xml  3A.xml  3h.xml  3u.xml  46.xml  4A.xml  4H.xml  4_.xml  4b.xml  4z.xml  5Q.xml  5T.xml  5j.xml  5p.xml  6l.xml  6v.xml  74.xml  7G.xml  7X.xml  7o.xml  7o1.xml  8e.xml  8v.xml  9T1.xml  9T2.xml  9V.xml  (+125 more)
_apk2/: AndroidManifest.xml  resources.arsc
_apk2/res/: -D.xml  -g.xml  05.xml  06.xml  09.xml  0O.xml  0V.xml  15.xml  1M.xml  1Q.xml  1b.xml  2f.xml  2j.xml  3A.xml  3h.xml  3u.xml  46.xml  4A.xml  4H.xml  4b.xml  4z.xml  5E.xml  5Q.xml  5j.xml  5p.xml  6l.xml  74.xml  77.xml  7G.xml  7X.xml  8v.xml  9V.xml  9m.xml  9z.xml  A1.xml  AE.xml  B-.xml  BJ.xml  BJ1.xml  (+131 more)
app/: build.gradle.kts  proguard-rules.pro  yassertv.jks
app/src/main/cpp/: CMakeLists.txt  ffmpeg_player.c  jni_bridge.c  native_player.c  string_encryption.c  yassertv_core.h
ffmpeg-build/: build-ffmpeg-android.sh  jni-player.sh
server/: .gitignore  .htaccess  admin.php  login.php  migration_add_last_seen.sql  supabase_admin.php
(+1002 files in other folders)
